# PyBankSystem

./: LICENSE  README.md  app.py  forms.py  models.py  pyproject.toml  routes.py  schemas.py  storage.py  utils.py  views.py
templates/: accounts.html  base.html  dashboard.html  index.html  login.html  register.html  transactions.html
