[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "flask-jwt-extended>=4.7.1",
    "flask-restx>=1.3.0",
    "marshmallow>=3.26.1",
    "python-dateutil>=2.9.0.post0",
    "werkzeug>=3.1.3",
]
